--- a/index.html
+++ b/index.html
@@ -1,12 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
-    
-</body>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <header>
+      <nav>
+        <img src="/img/logo.svg" alt="logo" class="logo">
+        <div class="navWrapper">
+        <p>skills</p>
+        <p>portfolio</p>
+        <p>video</p>
+        <p>price</p>
+        <p>contacts</p>
+        <a href="">en/ru</a>
+    </div>
+    </nav>
+    </header>
+    <main>
+        <img src="/img/bg.png" class="background">
+    </main>
+  </body>
 </html>
