--- a/index.html
+++ b/index.html
@@ -10,16 +10,65 @@
   <body>
     <header>
       <nav>
-        <img src="/img/logo.svg" alt="logo" class="logo">
+        <img src="/img/logo.svg" alt="logo" class="logo" />
         <div class="navWrapper">
-        <p>skills</p>
-        <p>portfolio</p>
-        <p>video</p>
-        <p>price</p>
-        <p>contacts</p>
-        <a href="">en/ru</a>
-    </div>
-    </nav>
+          <p>skills</p>
+          <p>portfolio</p>
+          <p>video</p>
+          <p>price</p>
+          <p>contacts</p>
+          <a href="">en/ru</a>
+        </div>
+      </nav>
+      <div class="hero">
+        <h1 class="heroTitle">Alexa Rise</h1>
+        <p class="heroText">
+          Save sincere emotions, romantic feelings and happy moments of life
+          together with professional photographer Alexa Rise
+        </p>
+        <input type="button" value="hireMe" class="hireMe" />
+      </div>
     </header>
+    <main>
+      <div class="skills">
+        <div class="sectionTitle">
+          <div class="sectionTitleLine"></div>
+          <h1 class="skillsTitle">Skills</h1>
+          <div class="sectionTitleLine"></div>
+        </div>
+
+
+        <div class="skillsItems">
+          <div class="skillsItem">
+            <img src="/img/camera.svg" alt="camera" class="skillsImg"/>
+            <h2 class="skillsItemsTitle">Digital photography</h2>
+            <p class="skillsItemsText">
+              High-quality photos in the studio and on the nature
+            </p>
+          </div>
+          <div class="skillsItem">
+            <img src="/img/video.svg" alt="video" class="skillsImg"/>
+            <h2 class="skillsItemsTitle">Video shooting</h2>
+            <p class="skillsItemsText">
+              Capture your moments so that they always stay with you
+            </p>
+          </div>
+          <div class="skillsItem">
+            <img src="/img/image.svg" alt="image" class="skillsImg"/>
+            <h2 class="skillsItemsTitle">Retouch</h2>
+            <p class="skillsItemsText">
+              I strive to make photography surpass reality
+            </p>
+          </div>
+          <div class="skillsItem">
+            <img src="/img/mic.svg" alt="mic" class="skillsImg"/>
+            <h2 class="skillsItemsTitle">Audio</h2>
+            <p class="skillsItemsText">
+              Professional sounds recording for video, advertising, portfolio
+            </p>
+          </div>
+        </div>
+      </div>
+    </main>
   </body>
 </html>
