--- a/index.html
+++ b/index.html
@@ -12,12 +12,16 @@
       <nav>
         <img src="/img/logo.svg" alt="logo" class="logo" />
         <div class="navWrapper">
-          <p>skills</p>
-          <p>portfolio</p>
-          <p>video</p>
-          <p>price</p>
-          <p>contacts</p>
-          <a href="">en/ru</a>
+          <p>Skills</p>
+          <p>Portfolio</p>
+          <p>Video</p>
+          <p>Price</p>
+          <p>Contacts</p>
+          <div class="translateWrapper">
+            <a href="" class="translateOn">en</a>
+            <p>/</p>
+            <a href="" class="translateOff">ru</a>
+          </div>
         </div>
       </nav>
       <div class="hero">
@@ -26,7 +30,7 @@
           Save sincere emotions, romantic feelings and happy moments of life
           together with professional photographer Alexa Rise
         </p>
-        <input type="button" value="hireMe" class="hireMe" />
+        <input type="button" value="HireMe" class="hireMe" />
       </div>
     </header>
     <main>
@@ -36,32 +40,30 @@
           <h1 class="skillsTitle">Skills</h1>
           <div class="sectionTitleLine"></div>
         </div>
-
-
         <div class="skillsItems">
           <div class="skillsItem">
-            <img src="/img/camera.svg" alt="camera" class="skillsImg"/>
+            <img src="/img/camera.svg" alt="camera" class="skillsImg" />
             <h2 class="skillsItemsTitle">Digital photography</h2>
             <p class="skillsItemsText">
               High-quality photos in the studio and on the nature
             </p>
           </div>
           <div class="skillsItem">
-            <img src="/img/video.svg" alt="video" class="skillsImg"/>
+            <img src="/img/video.svg" alt="video" class="skillsImg" />
             <h2 class="skillsItemsTitle">Video shooting</h2>
             <p class="skillsItemsText">
               Capture your moments so that they always stay with you
             </p>
           </div>
           <div class="skillsItem">
-            <img src="/img/image.svg" alt="image" class="skillsImg"/>
+            <img src="/img/image.svg" alt="image" class="skillsImg" />
             <h2 class="skillsItemsTitle">Retouch</h2>
             <p class="skillsItemsText">
               I strive to make photography surpass reality
             </p>
           </div>
           <div class="skillsItem">
-            <img src="/img/mic.svg" alt="mic" class="skillsImg"/>
+            <img src="/img/mic.svg" alt="mic" class="skillsImg" />
             <h2 class="skillsItemsTitle">Audio</h2>
             <p class="skillsItemsText">
               Professional sounds recording for video, advertising, portfolio
@@ -69,6 +71,15 @@
           </div>
         </div>
       </div>
+      <!--skills end
+        portfolio start-->
+        <div class="portfolio">
+        <div class="titleWrapper">
+          <div class="portfolioTitleLine"></div>
+          <h2 class="portfolioTitle">Portfolio</h2>
+          <div class="portfolioTitleLine"></div>
+        </div>
+      </div>  
     </main>
   </body>
 </html>
