--- a/index.html
+++ b/index.html
@@ -73,13 +73,66 @@
       </div>
       <!--skills end
         portfolio start-->
-        <div class="portfolio">
+      <div class="portfolio">
         <div class="titleWrapper">
           <div class="portfolioTitleLine"></div>
           <h2 class="portfolioTitle">Portfolio</h2>
           <div class="portfolioTitleLine"></div>
         </div>
-      </div>  
+        <div class="portfoliobtns">
+          <div class="btnWrapper"><a href="" class="btn">Winter</a></div>
+          <div class="btnWrapper"><a href="" class="btn">Spring</a></div>
+          <div class="btnWrapper"><a href="" class="btn">Summer</a></div>
+          <div class="btnWrapper btnActiv"><a href="" class="btn btnActiv">Autumn</a></div>
+        </div>
+        <div class="portfolioImgWrapper">
+          <img src="/img/portfolio-img.png" class="portfolioImg" alt="">
+          <img src="/img/portfolio-img(1).png" class="portfolioImg" alt="">
+          <img src="/img/portfolio-img(2).png" class="portfolioImg" alt="">
+          <img src="/img/portfolio-img(3).png" class="portfolioImg" alt="">
+          <img src="/img/portfolio-img(4).png" class="portfolioImg" alt="">
+          <img src="/img/portfolio-img(5).png" class="portfolioImg" alt="">
+        </div>
+      </div>
+      <!--portfolio end
+      video start-->
+      <div class="video">
+        <div class="videoTitleWrapper">
+          <div class="videoTitleLine"></div>
+          <h2 class="videoTitle">Video</h2>
+          <div class="videoTitleLine"></div>
+        </div>
+        <img src="/img/video-player.png" class="videoPlayer" alt="">
+      </div>
+      <!--video end
+        price start-->
+        <div class="price">
+        <div class="priceTitleWrapper">
+          <div class="priceTitleLine"></div>
+          <H2 class="priceTitle">Price</H2>
+          <div class="priceTitleLine"></div>
+        </div>
+        <div class="priceItemWrapper">
+          <div class="priceItem">
+            <h2 class="priceItemTitle"></h2>
+            <h2 class="priceItemPrice"></h2>
+            <div class="priceItemFrameWrapper">
+              <p class="priceItemFrame"></p>
+              <p class="priceItemFrame"></p>
+              <p class="priceItemFrame"></p>
+              <p class="priceItemFrame"></p>
+              <p class="priceItemFrame"></p>
+            </div>
+            <button></button>
+          </div>
+          <div class="priceItem">
+
+          </div>
+          <div class="priceItem">
+
+          </div>
+        </div>
+      </div>
     </main>
   </body>
 </html>
