--- a/index.html
+++ b/index.html
@@ -30,15 +30,17 @@
           Save sincere emotions, romantic feelings and happy moments of life
           together with professional photographer Alexa Rise
         </p>
-        <button class="hireMe" >Hire me</button>
+        <button class="hireMe">Hire me</button>
       </div>
     </header>
     <main>
       <div class="skills">
-        <div class="sectionTitle">
-          <div class="sectionTitleLine"></div>
-          <h1 class="skillsTitle">Skills</h1>
-          <div class="sectionTitleLine"></div>
+        <div class="sectionTitleWrapper">
+          <div class="sectionTitleSkills">
+            <div class="sectionTitleLine"></div>
+            <h1 class="skillsTitle">Skills</h1>
+            <div class="sectionTitleLine"></div>
+          </div>
         </div>
         <div class="skillsItems">
           <div class="skillsItem">
@@ -74,11 +76,13 @@
       <!--skills end
         portfolio start-->
       <div class="portfolio">
-        <div class="titleWrapper">
-          <div class="portfolioTitleLine"></div>
-          <h2 class="portfolioTitle">Portfolio</h2>
-          <div class="portfolioTitleLine"></div>
-        </div>
+          <div class="sectionTitleWrapper">
+            <div class="sectionTitleSkills">
+              <div class="portfolioTitleLine"></div>
+              <h2 class="portfolioTitle">Portfolio</h2>
+              <div class="portfolioTitleLine"></div>
+            </div>
+          </div>
         <div class="portfoliobtns">
           <div class="btnWrapper"><a href="" class="btn">Winter</a></div>
           <div class="btnWrapper"><a href="" class="btn">Spring</a></div>
@@ -99,21 +103,23 @@
       <!--portfolio end
       video start-->
       <div class="video">
+        <div class="sectionTitleWrapper">
         <div class="videoTitleWrapper">
           <div class="videoTitleLine"></div>
           <h2 class="videoTitle">Video</h2>
           <div class="videoTitleLine"></div>
-        </div>
+        </div></div>
         <img src="/img/video-player.png" class="videoPlayer" alt="" />
       </div>
       <!--video end
         price start-->
       <div class="price">
+        <div class="sectionTitleWrapper">
         <div class="priceTitleWrapper">
           <div class="priceTitleLine"></div>
           <h2 class="priceTitle">Price</h2>
           <div class="priceTitleLine"></div>
-        </div>
+        </div></div>
         <div class="priceItemWrapper">
           <div class="priceItem">
             <h2 class="priceItemTitle">Standard</h2>
@@ -158,12 +164,17 @@
       <div class="contacts">
         <div class="contactsContainer">
           <h2>Contact me</h2>
-          <input type="text" class="E-mail aboutYou">
-          <input type="text" class="Phone aboutYou">
-          <input type="text" class="message aboutYou">
+          <input type="email" class="e-mailAboutYou aboutYou" placeholder="    E-mail">
+          <input type="tel" class="phoneAboutYou aboutYou" placeholder="    Phone"/>
+          <textarea class="messageAboutYou aboutYou" placeholder="  Message"></textarea>
           <button class="sendMessage">Send message</button>
         </div>
       </div>
     </main>
+    <!--contacts end
+    footer start-->
+    <footer>
+      
+    </footer>
   </body>
 </html>
