--- a/index.html
+++ b/index.html
@@ -76,13 +76,13 @@
       <!--skills end
         portfolio start-->
       <div class="portfolio">
-          <div class="sectionTitleWrapper">
-            <div class="sectionTitleSkills">
-              <div class="portfolioTitleLine"></div>
-              <h2 class="portfolioTitle">Portfolio</h2>
-              <div class="portfolioTitleLine"></div>
-            </div>
+        <div class="sectionTitleWrapper">
+          <div class="sectionTitleSkills">
+            <div class="portfolioTitleLine"></div>
+            <h2 class="portfolioTitle">Portfolio</h2>
+            <div class="portfolioTitleLine"></div>
           </div>
+        </div>
         <div class="portfoliobtns">
           <div class="btnWrapper"><a href="" class="btn">Winter</a></div>
           <div class="btnWrapper"><a href="" class="btn">Spring</a></div>
@@ -104,22 +104,24 @@
       video start-->
       <div class="video">
         <div class="sectionTitleWrapper">
-        <div class="videoTitleWrapper">
-          <div class="videoTitleLine"></div>
-          <h2 class="videoTitle">Video</h2>
-          <div class="videoTitleLine"></div>
-        </div></div>
+          <div class="videoTitleWrapper">
+            <div class="videoTitleLine"></div>
+            <h2 class="videoTitle">Video</h2>
+            <div class="videoTitleLine"></div>
+          </div>
+        </div>
         <img src="/img/video-player.png" class="videoPlayer" alt="" />
       </div>
       <!--video end
         price start-->
       <div class="price">
         <div class="sectionTitleWrapper">
-        <div class="priceTitleWrapper">
-          <div class="priceTitleLine"></div>
-          <h2 class="priceTitle">Price</h2>
-          <div class="priceTitleLine"></div>
-        </div></div>
+          <div class="priceTitleWrapper">
+            <div class="priceTitleLine"></div>
+            <h2 class="priceTitle">Price</h2>
+            <div class="priceTitleLine"></div>
+          </div>
+        </div>
         <div class="priceItemWrapper">
           <div class="priceItem">
             <h2 class="priceItemTitle">Standard</h2>
@@ -164,9 +166,20 @@
       <div class="contacts">
         <div class="contactsContainer">
           <h2>Contact me</h2>
-          <input type="email" class="e-mailAboutYou aboutYou" placeholder="    E-mail">
-          <input type="tel" class="phoneAboutYou aboutYou" placeholder="    Phone"/>
-          <textarea class="messageAboutYou aboutYou" placeholder="  Message"></textarea>
+          <input
+            type="email"
+            class="e-mailAboutYou aboutYou"
+            placeholder="    E-mail"
+          />
+          <input
+            type="tel"
+            class="phoneAboutYou aboutYou"
+            placeholder="    Phone"
+          />
+          <textarea
+            class="messageAboutYou aboutYou"
+            placeholder="  Message"
+          ></textarea>
           <button class="sendMessage">Send message</button>
         </div>
       </div>
@@ -174,7 +187,12 @@
     <!--contacts end
     footer start-->
     <footer>
-      
+      <div class="socialData">
+        <img src="/img/c.png" alt="">
+        <p>2022</p>
+        <a href="" class="githubLink">github</a>
+      </div>
+      <div ></div>
     </footer>
   </body>
 </html>
