--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         </div>
       </nav>
       <div class="hero">
-        <h1 class="heroTitle">Alexa Rise</h1>
+        <h2 class="heroTitle">Alexa Rise</h2>
         <p class="heroText">
           Save sincere emotions, romantic feelings and happy moments of life
           together with professional photographer Alexa Rise
@@ -52,35 +52,35 @@
         <div class="sectionTitleWrapper">
           <div class="sectionTitleSkills">
             <div class="sectionTitleLine"></div>
-            <h1 class="skillsTitle">Skills</h1>
+            <h2 class="skillsTitle">Skills</h2>
             <div class="sectionTitleLine"></div>
           </div>
         </div>
         <div class="skillsItems">
           <div class="skillsItem">
             <img src="/img/camera.svg" alt="camera" class="skillsImg" />
-            <h2 class="skillsItemsTitle">Digital photography</h2>
+            <h3 class="skillsItemsTitle">Digital photography</h3>
             <p class="skillsItemsText">
               High-quality photos in the studio and on the nature
             </p>
           </div>
           <div class="skillsItem">
             <img src="/img/video.svg" alt="video" class="skillsImg" />
-            <h2 class="skillsItemsTitle">Video shooting</h2>
+            <h3 class="skillsItemsTitle">Video shooting</h3>
             <p class="skillsItemsText">
               Capture your moments so that they always stay with you
             </p>
           </div>
           <div class="skillsItem">
             <img src="/img/image.svg" alt="image" class="skillsImg" />
-            <h2 class="skillsItemsTitle">Retouch</h2>
+            <h3 class="skillsItemsTitle">Retouch</h3>
             <p class="skillsItemsText">
               I strive to make photography surpass reality
             </p>
           </div>
           <div class="skillsItem">
             <img src="/img/mic.svg" alt="mic" class="skillsImg" />
-            <h2 class="skillsItemsTitle">Audio</h2>
+            <h3 class="skillsItemsTitle">Audio</h3>
             <p class="skillsItemsText">
               Professional sounds recording for video, advertising, portfolio
             </p>
@@ -94,7 +94,7 @@
         <div class="sectionTitleWrapper">
           <div class="sectionTitleSkills">
             <div class="portfolioTitleLine"></div>
-            <h1 class="portfolioTitle" id="#portfolio">Portfolio</h1>
+            <h2 class="portfolioTitle" id="#portfolio">Portfolio</h2>
             <div class="portfolioTitleLine"></div>
           </div>
         </div>
@@ -107,54 +107,55 @@
           </div>
         </div>
         <div class="portfolioImgWrapper">
-          <img src="/img/portfolio-img.png" class="portfolioImg" alt="" />
-          <img src="/img/portfolio-img(1).png" class="portfolioImg" alt="" />
-          <img src="/img/portfolio-img(2).png" class="portfolioImg" alt="" />
-          <img src="/img/portfolio-img(3).png" class="portfolioImg" alt="" />
-          <img src="/img/portfolio-img(4).png" class="portfolioImg" alt="" />
-          <img src="/img/portfolio-img(5).png" class="portfolioImg" alt="" />
+          <img src="/img/portfolio-img.png" class="portfolioImg" alt="portfolioImg" />
+          <img src="/img/portfolio-img(1).png" class="portfolioImg" alt="portfolioImg" />
+          <img src="/img/portfolio-img(2).png" class="portfolioImg" alt="portfolioImg" />
+          <img src="/img/portfolio-img(3).png" class="portfolioImg" alt="portfolioImg" />
+          <img src="/img/portfolio-img(4).png" class="portfolioImg" alt="portfolioImg" />
+          <img src="/img/portfolio-img(5).png" class="portfolioImg" alt="portfolioImg" />
         </div>
       </div>
       <!--portfolio end
       video start-->
       <div class="video">
         <a name="video"></a>
-        <div class="sectionTitleWrapper">
+        <div class="sectionTitleWrapper1">
           <div class="videoTitleWrapper">
+            <img src="/img/Play_hover.svg" alt="playHover" class="playHover">
             <div class="videoTitleLine"></div>
-            <h1 class="videoTitle">Video</h1>
+            <h2 class="videoTitle">Video</h2>
             <div class="videoTitleLine"></div>
           </div>
         </div>
-        <img src="/img/video-player.png" class="videoPlayer" alt="" />
+        <img src="/img/video-player.png" class="videoPlayer" alt="video" />
       </div>
       <!--video end
         price start-->
       <div class="price">
         <a name="price"></a>
-        <div class="sectionTitleWrapper">
+        <div class="sectionTitleWrapper1">
           <div class="priceTitleWrapper">
             <div class="priceTitleLine"></div>
-            <h1 class="priceTitle">Price</h1>
+            <h2 class="priceTitle">Price</h1>
             <div class="priceTitleLine"></div>
           </div>
         </div>
         <div class="priceItemWrapper">
           <div class="priceItem">
-            <h2 class="priceItemTitle">Standard</h2>
-            <h2 class="priceItemPrice">500 $</h2>
+            <h3 class="priceItemTitle">Standard</h3>
+            <h3 class="priceItemPrice">500 $</h3>
             <div class="priceItemFrameWrapper">
               <p class="priceItemFrame">One location</p>
               <p class="priceItemFrame">120 photos in color</p>
               <p class="priceItemFrame">12 photos in retouch</p>
-              <p class="priceItemFrame">Readiness 2-3 weeks</p>
+              <p class="priceItemFrame">Readiness 2-3weeks</p>
               <p class="priceItemFrame">Make up, visage</p>
             </div>
             <button class="priceItemButton">Order shooting</button>
           </div>
           <div class="priceItem">
-            <h2 class="priceItemTitle">Premium</h2>
-            <h2 class="priceItemPrice">700 $</h2>
+            <h3 class="priceItemTitle">Premium</h2>
+            <h3 class="priceItemPrice">700 $</h3>
             <div class="priceItemFrameWrapper">
               <p class="priceItemFrame">One or two locations</p>
               <p class="priceItemFrame">200 photos in color</p>
@@ -165,8 +166,8 @@
             <button class="priceItemButton">Order shooting</button>
           </div>
           <div class="priceItem">
-            <h2 class="priceItemTitle">Gold</h2>
-            <h2 class="priceItemPrice">1000 $</h2>
+            <h3 class="priceItemTitle">Gold</h3>
+            <h3 class="priceItemPrice">1000 $</h3>
             <div class="priceItemFrameWrapper">
               <p class="priceItemFrame">Three locations or more</p>
               <p class="priceItemFrame">300 photos in color</p>
@@ -183,7 +184,7 @@
       <div class="contacts">
         <a name="contacts"></a>
         <div class="contactsContainer">
-          <h1 class="contactsTitle">Contact me</h2>
+          <h2 class="contactsTitle">Contact me</h2>
           <input
             type="email"
             class="e-mailAboutYou aboutYou"
@@ -208,7 +209,7 @@
       <div class="socialData">
         <img src="/img/c.png" alt="c" class="c" />
         <p>2022</p>
-        <a href="" class="githubLink">github</a>
+        <a href="https://github.com/mrt-c" class="githubLink">github</a>
       </div>
       <div class="socialListWrapper">
         <a href=""
