--- a/index.html
+++ b/index.html
@@ -58,28 +58,28 @@
         </div>
         <div class="skillsItems">
           <div class="skillsItem">
-            <img src="/img/camera.svg" alt="camera" class="skillsImg" />
+            <img src="portfolio/img/camera.svg" alt="camera" class="skillsImg" />
             <h3 class="skillsItemsTitle">Digital photography</h3>
             <p class="skillsItemsText">
               High-quality photos in the studio and on the nature
             </p>
           </div>
           <div class="skillsItem">
-            <img src="/img/video.svg" alt="video" class="skillsImg" />
+            <img src="portfolio/img/video.svg" alt="video" class="skillsImg" />
             <h3 class="skillsItemsTitle">Video shooting</h3>
             <p class="skillsItemsText">
               Capture your moments so that they always stay with you
             </p>
           </div>
           <div class="skillsItem">
-            <img src="/img/image.svg" alt="image" class="skillsImg" />
+            <img src="portfolio/img/image.svg" alt="image" class="skillsImg" />
             <h3 class="skillsItemsTitle">Retouch</h3>
             <p class="skillsItemsText">
               I strive to make photography surpass reality
             </p>
           </div>
           <div class="skillsItem">
-            <img src="/img/mic.svg" alt="mic" class="skillsImg" />
+            <img src="portfolio/img/mic.svg" alt="mic" class="skillsImg" />
             <h3 class="skillsItemsTitle">Audio</h3>
             <p class="skillsItemsText">
               Professional sounds recording for video, advertising, portfolio
