--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             </p>
           </div>
           <div class="skillsItem">
-            <img src="portfolio/img/video.svg" alt="video" class="skillsImg" />
+            <img src="../portfolio/img/video.svg" alt="video" class="skillsImg" />
             <h3 class="skillsItemsTitle">Video shooting</h3>
             <p class="skillsItemsText">
               Capture your moments so that they always stay with you
