--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         </div>
         <div class="skillsItems">
           <div class="skillsItem">
-            <img src="portfolio/img/camera.svg" alt="camera" class="skillsImg" />
+            <img src="./img/camera.svg" alt="camera" class="skillsImg" />
             <h3 class="skillsItemsTitle">Digital photography</h3>
             <p class="skillsItemsText">
               High-quality photos in the studio and on the nature
