--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             </p>
           </div>
           <div class="skillsItem">
-            <img src="portfolio/img/image.svg" alt="image" class="skillsImg" />
+            <img src="/img/image.svg" alt="image" class="skillsImg" />
             <h3 class="skillsItemsTitle">Retouch</h3>
             <p class="skillsItemsText">
               I strive to make photography surpass reality
