--- a/index.html
+++ b/index.html
@@ -58,14 +58,14 @@
         </div>
         <div class="skillsItems">
           <div class="skillsItem">
-            <img src="/img/camera.svg" alt="camera" class="skillsImg" />
+            <img src="./img/camera.svg" alt="camera" class="skillsImg" />
             <h3 class="skillsItemsTitle">Digital photography</h3>
             <p class="skillsItemsText">
               High-quality photos in the studio and on the nature
             </p>
           </div>
           <div class="skillsItem">
-            <img src="/img/video.svg" alt="video" class="skillsImg" />
+            <img src="../portfolio/img/video.svg" alt="video" class="skillsImg" />
             <h3 class="skillsItemsTitle">Video shooting</h3>
             <p class="skillsItemsText">
               Capture your moments so that they always stay with you
@@ -79,7 +79,7 @@
             </p>
           </div>
           <div class="skillsItem">
-            <img src="/img/mic.svg" alt="mic" class="skillsImg" />
+            <img src="portfolio/img/mic.svg" alt="mic" class="skillsImg" />
             <h3 class="skillsItemsTitle">Audio</h3>
             <p class="skillsItemsText">
               Professional sounds recording for video, advertising, portfolio
