--- a/index.html
+++ b/index.html
@@ -65,21 +65,21 @@
             </p>
           </div>
           <div class="skillsItem">
-            <img src="../portfolio/img/video.svg" alt="video" class="skillsImg" />
+            <img src="./img/video.svg" alt="video" class="skillsImg" />
             <h3 class="skillsItemsTitle">Video shooting</h3>
             <p class="skillsItemsText">
               Capture your moments so that they always stay with you
             </p>
           </div>
           <div class="skillsItem">
-            <img src="/img/image.svg" alt="image" class="skillsImg" />
+            <img src="./img/image.svg" alt="image" class="skillsImg" />
             <h3 class="skillsItemsTitle">Retouch</h3>
             <p class="skillsItemsText">
               I strive to make photography surpass reality
             </p>
           </div>
           <div class="skillsItem">
-            <img src="portfolio/img/mic.svg" alt="mic" class="skillsImg" />
+            <img src="./portfolio/img/mic.svg" alt="mic" class="skillsImg" />
             <h3 class="skillsItemsTitle">Audio</h3>
             <p class="skillsItemsText">
               Professional sounds recording for video, advertising, portfolio
@@ -107,12 +107,12 @@
           </div>
         </div>
         <div class="portfolioImgWrapper">
-          <img src="/img/portfolio-img.png" class="portfolioImg" alt="portfolioImg" />
-          <img src="/img/portfolio-img(1).png" class="portfolioImg" alt="portfolioImg" />
-          <img src="/img/portfolio-img(2).png" class="portfolioImg" alt="portfolioImg" />
-          <img src="/img/portfolio-img(3).png" class="portfolioImg" alt="portfolioImg" />
-          <img src="/img/portfolio-img(4).png" class="portfolioImg" alt="portfolioImg" />
-          <img src="/img/portfolio-img(5).png" class="portfolioImg" alt="portfolioImg" />
+          <img src="./img/portfolio-img.png" class="portfolioImg" alt="portfolioImg" />
+          <img src="./img/portfolio-img(1).png" class="portfolioImg" alt="portfolioImg" />
+          <img src="./img/portfolio-img(2).png" class="portfolioImg" alt="portfolioImg" />
+          <img src="./img/portfolio-img(3).png" class="portfolioImg" alt="portfolioImg" />
+          <img src="./img/portfolio-img(4).png" class="portfolioImg" alt="portfolioImg" />
+          <img src="./img/portfolio-img(5).png" class="portfolioImg" alt="portfolioImg" />
         </div>
       </div>
       <!--portfolio end
@@ -121,13 +121,13 @@
         <a name="video"></a>
         <div class="sectionTitleWrapper1">
           <div class="videoTitleWrapper">
-            <img src="/img/Play_hover.svg" alt="playHover" class="playHover">
+            <img src="./img/Play_hover.svg" alt="playHover" class="playHover">
             <div class="videoTitleLine"></div>
             <h2 class="videoTitle">Video</h2>
             <div class="videoTitleLine"></div>
           </div>
         </div>
-        <img src="/img/video-player.png" class="videoPlayer" alt="video" />
+        <img src="./img/video-player.png" class="videoPlayer" alt="video" />
       </div>
       <!--video end
         price start-->
@@ -207,22 +207,22 @@
     footer start-->
     <footer>
       <div class="socialData">
-        <img src="/img/c.png" alt="c" class="c" />
+        <img src="./img/c.png" alt="c" class="c" />
         <p>2022</p>
         <a href="https://github.com/mrt-c" class="githubLink">github</a>
       </div>
       <div class="socialListWrapper">
         <a href=""
-          ><img src="/img/Vector (1).svg" alt="instagram" class="socialList"
+          ><img src="./img/Vector (1).svg" alt="instagram" class="socialList"
         /></a>
         <a href=""
-          ><img src="/img/Vector (2).svg" alt="facebook" class="socialList"
+          ><img src="./img/Vector (2).svg" alt="facebook" class="socialList"
         /></a>
         <a href=""
-          ><img src="/img/Vector (3).svg" alt="twitter" class="socialList"
+          ><img src="./img/Vector (3).svg" alt="twitter" class="socialList"
         /></a>
         <a href=""
-          ><img src="/img/Vector (4).svg" alt="pinterest" class="socialList"
+          ><img src="./img/Vector (4).svg" alt="pinterest" class="socialList"
         /></a>
       </div>
     </footer>
