--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <body>
     <header>
       <nav>
-        <a href=""><img src="/img/logo.svg" alt="logo" class="logo" /></a>
+        <a href=""><img src="./img/logo.svg" alt="logo" class="logo" /></a>
         <div class="navWrapper">
           <a href="#skills" class="navigation">Skills</a>
           <a href="#portfolio" class="navigation">Portfolio</a>
